# Ros_lidar_bot

./: .gitignore  AUTONOMY_RUN_GUIDE.md  CHECK.md  CMakeLists.txt  README.md  install_rpi5_jazzy.sh  kill_program.bash  package.xml  page.html  requirements.txt  setup.cfg  setup.py
.cursor/rules/: git-push-after-commit.mdc
Ros_lidar_bot/: bringup_status_node.py  check_qos_mismatch.py  drive_distance_node.py  driver_control.py  driver_node.py  frontier_explorer_node.py  imu_calibration_node.py  imu_data_node.py  imu_node.py  imu_test_node.py  joy_teleop_node.py  lidar_node.py  non_safety_teleop_node.py  odom_check.py  odom_node.py  robot_dashboard_node.py  safety_stop_node.py  scan_min_range_filter_node.py  semantic_slam_node.py  teleop_node.py  yolo.py  yolo_world_webcam_ros2.py
config/: ekf.yaml  explore_lite.yaml  frontier_explorer.yaml  mapper_params_lifelong.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  view_bot.rviz
description/: camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_control.xacro  robot_core.xacro  slam.gazebo  slam.xacro
docs/: frontier_explorer_report_v2.md  semantic_positioning_math.md  system_architecture.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Ros_lidar_bot/lib/Ros_lidar_bot/: check_qos_mismatch  yolo  (+11 more)
launch/: autonomous_exploration.launch.py  autonomous_explore.launch.py  autonomous_robot.launch.py  launch_robot.launch.py  launch_sim.launch.py  lidar_test.launch.py  navigation_launch.py  rsp.launch.py  semantic_slam.launch.py  vision.launch.py
log/: latest_build
maps/: my_maze_world.pgm
meshes/: BHARAT_-FIH_-AMR-MAIN_WHEEL_WITH_MOTOR-PA-001_1.stl  BHARAT_-FIH_-AMR-MAIN_WHEEL_WITH_MOTOR-PA-001__1__1.stl  ball_caster_wheel_1.stl  ball_caster_wheel__1__1.stl  base_link.stl  imu_for_urdf_1.stl  lidar_1.stl  lidar_urdf_1.stl  wheel_urdf_1.stl
ros_lidar_bot/: frontier_explorer.py  odom_check.py  teleop_node.py
scripts/: install_deps.sh  launch_compat.sh
worlds/: apartment.world  arena.sdf  boxes.sdf  castle.sdf  circles.sdf  corridor_world.sdf  cross.sdf  empty.world  grid.sdf  maze_world.sdf  office.world  office_world.sdf  open_obstacles_world.sdf  room.world  room_world.sdf  scatter.sdf  spiral.sdf  star.sdf  testing.world  warehouse.world  warehouse_world.sdf  yoyo.sdf  zigzag.sdf
(+32 files in other folders)
